<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the toolbar for conversion -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Inversion, icon and text should appear if room -->
    <item
        android:id="@+id/menu_item_invert_currencies"
        android:icon="@drawable/icons_data_transfer"
        android:orderInCategory="100"
        android:title="@string/currency_inversion"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_new_crime"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="102"
        android:title="@string/add_currency"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_edit_currency"
        android:icon="@drawable/ic_edit_currency"
        android:orderInCategory="101"
        android:title="@string/base_currency_title"
        app:showAsAction="ifRoom|withText"/>

</menu>