<?xml version="1.0" encoding="utf-8"?>

<!-- This layout provides an interface
  for the user to pick preferred network connection -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/internet_text_view"
        android:text="@string/internet_message"
        android:textSize="@dimen/dialog_internet_title_text_size"
        android:textAlignment="center"
        android:layout_margin="@dimen/dialog_internet_text_padding"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/internet_linear_layout"
        style="?android:buttonBarStyle"
        android:gravity="center">

    <Button
        android:id="@+id/internet_wifi_button"
        android:layout_width="@dimen/dialog_internet_button_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_wifi_option"
        android:drawablePadding="@dimen/dialog_internet_drawable_spacing"
        android:text="@string/wifi_option"
        style="?android:buttonBarButtonStyle"
        android:textAllCaps="false"
        android:textSize="@dimen/dialog_internet_text_size"
        android:textColor="@android:color/darker_gray"/>

    <Button
        android:id="@+id/internet_mobile_network_button"
        android:layout_width="@dimen/dialog_internet_button_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_network_option"
        android:drawablePadding="@dimen/dialog_internet_drawable_spacing"
        android:text="@string/mobile_network_option"
        android:textAllCaps="false"
        style="?android:buttonBarButtonStyle"
        android:textSize="@dimen/dialog_internet_text_size"
        android:textColor="@android:color/darker_gray"/>

    </LinearLayout>

    <Button
        android:id="@+id/internet_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_button"
        android:textSize="@dimen/dialog_internet_button_text_size"
        android:textStyle="bold"
        style="?android:buttonBarStyle"
        android:layout_gravity="center"/>

</LinearLayout>
