<?xml version="1.0" encoding="utf-8"?>

<!-- This provides the interface for
  conversion btn currencies -->

<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/conversion_coordinator_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/conversion_linear_layout1"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/conversion_side_margin"
                android:layout_marginRight="@dimen/conversion_side_margin"
                android:layout_marginBottom="@dimen/conversion_bottom_margin"
                android:id="@+id/conversion_currency1_edit_view"
                android:background="@drawable/square_background"
                android:inputType="numberDecimal"
                android:hint="@string/currency1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/conversion_currency1_edit_view"
                android:background="@drawable/rounded_layout_bg"
                android:padding="@dimen/conversion_text_view1_padding"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/conversion_side_margin"
                android:layout_marginRight="@dimen/conversion_side_margin"
                android:labelFor="@id/conversion_currency1_edit_view"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceLargePopupMenu"
                android:id="@+id/conversion_currency1_text_view"/>


        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conversion_arrow"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/arrow_description"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/conversion_currency2_edit_view"
                android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/conversion_side_margin"
                android:layout_marginRight="@dimen/conversion_side_margin"
                android:layout_marginBottom="@dimen/conversion_bottom_margin"
                android:background="@drawable/square_background"
                android:inputType="numberDecimal"
                android:hint="@string/currency2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_layout_bg"
                android:padding="@dimen/conversion_text_view2_padding"
                android:textAlignment="center"
                android:layout_below="@id/conversion_currency2_edit_view"
                android:layout_marginLeft="@dimen/conversion_side_margin"
                android:layout_marginRight="@dimen/conversion_side_margin"
                android:layout_gravity="center"
                android:labelFor="@id/conversion_currency2_edit_view"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceLargePopupMenu"
                android:id="@+id/conversion_currency2_text_view"
                />

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>